--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mongoose": "^7.5.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "sharp": "^0.34.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
-} 
+}
