--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "form-data": "^4.0.2",
     "mongoose": "^7.5.0",
     "request": "^2.88.2",
     "sharp": "^0.34.1"
